# Gazebo-and-Cpp

devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/include/navigation/: 3dofStates.h  state.h
devel/lib/navigation/: catchTests  navTest  spacialDualLocalisation  writer
devel/lib/pkgconfig/: navigation.pc  vrx_basics.pc  what_the_fuck.pc
devel/lib/python3/dist-packages/navigation/msg/: _state.py
devel/lib/vrx_basics/: gpsTest  sinDrive
devel/share/common-lisp/ros/navigation/msg/: 3dofStates.lisp  _package.lisp  _package_3dofStates.lisp  navigation-msg.asd  state.lisp
devel/share/gennodejs/ros/navigation/msg/: 3dofStates.js  state.js
devel/share/navigation/cmake/: navigation-msg-paths.cmake  navigationConfig.cmake
devel/share/roseus/ros/navigation/: manifest.l
devel/share/roseus/ros/navigation/msg/: 3dofStates.l  state.l
devel/share/roseus/ros/vrx_basics/: manifest.l
devel/share/vrx_basics/cmake/: vrx_basics-msg-paths.cmake  vrx_basicsConfig.cmake
devel/share/what_the_fuck/cmake/: what_the_fuckConfig.cmake
model/: NUMarine_wamv.urdf  sensor_config.xacro  sensor_config.yaml
src/: output.csv  rosCommans.txt
src/Testing/: CMakeLists.txt  package.xml
src/navigation/: CMakeLists.txt  CMakeLists_backup.txt
src/navigation/data/: estimatedState.csv  estimatedState_GPSIMU.csv  estimatedState_vid.csv  logodds.csv  occupancy.csv  testMap.csv  testMat.csv  testMatLarge.csv  trueState.csv  trueState_GPSIMU.csv
src/navigation/include/navigation/: Eig.hpp  spacialDual.h
src/navigation/msg/: state.msg
src/navigation/src/: Eig.cpp  Eig.hpp  extractRange.cpp  helpers.cpp  helpers.h  lidar.cpp  lidar.h  lidar.hpp  map.cpp  map.h  particleFilter.cpp  particleFilter.h  sensorData.h  spacialDual.cpp  spacialDual.h  spacialDualLocalisation.cpp  statePlotSubscriber.m  testing.cpp  testing.h  wamv.cpp  wamv.h  writer.cpp
src/navigation/test/: navTest.cpp
src/navigation/test/src/: GPS.cpp  eigenAtan2.cpp  helpingFunctions.cpp  lidar.cpp  map.cpp  quaternionConversions.cpp  wamv.cpp
src/navigation/tests/: navTest.cpp
src/vrx_basics/: CMakeLists.txt  package.xml
src/vrx_basics/src/: extractRange.cpp  extractRange.h  gpsTest.cpp  grabRange.cpp  grabRange.h  lidarMeasure.h  sinDrive.cpp
